:recycle: apply same logic to list