@@ -1,25 +1,22 @@
 package net.pengcook.recipe.service;
 
 import java.time.LocalTime;
-import java.util.Collection;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import net.pengcook.authentication.domain.UserInfo;
+import net.pengcook.category.dto.CategoryResponse;
 import net.pengcook.category.service.CategoryService;
 import net.pengcook.comment.service.CommentService;
 import net.pengcook.image.service.ImageClientService;
+import net.pengcook.ingredient.dto.IngredientResponse;
 import net.pengcook.ingredient.service.IngredientRecipeService;
 import net.pengcook.ingredient.service.IngredientService;
 import net.pengcook.like.repository.RecipeLikeRepository;
 import net.pengcook.like.service.RecipeLikeService;
 import net.pengcook.recipe.domain.Recipe;
-import net.pengcook.category.dto.CategoryResponse;
-import net.pengcook.ingredient.dto.IngredientResponse;
 import net.pengcook.recipe.dto.PageRecipeRequest;
-import net.pengcook.recipe.dto.RecipeDataResponse;
 import net.pengcook.recipe.dto.RecipeDescriptionResponse;
 import net.pengcook.recipe.dto.RecipeHomeResponse;
 import net.pengcook.recipe.dto.RecipeHomeWithMineResponse;
@@ -68,8 +65,7 @@ public class RecipeService {
                 pageRecipeRequest.userId()
         );
 
-        List<RecipeDataResponse> recipeDataResponses = recipeRepository.findRecipeData(recipeIds);
-        return convertToMainRecipeResponses(userInfo, recipeDataResponses);
+        return getRecipeHomeWithMineResponses(userInfo, recipeIds);
     }
 
     @Transactional(readOnly = true)
@@ -133,9 +129,8 @@ public class RecipeService {
     @Transactional(readOnly = true)
     public List<RecipeHomeWithMineResponse> readLikeRecipes(UserInfo userInfo) {
         List<Long> likeRecipeIds = likeRepository.findRecipeIdsByUserId(userInfo.getId());
-        List<RecipeDataResponse> recipeDataResponses = recipeRepository.findRecipeData(likeRecipeIds);
 
-        return convertToMainRecipeResponses(userInfo, recipeDataResponses);
+        return getRecipeHomeWithMineResponses(userInfo, likeRecipeIds);
     }
 
     @Transactional(readOnly = true)
@@ -219,44 +214,16 @@ public class RecipeService {
         });
     }
 
-    private List<RecipeHomeWithMineResponse> convertToMainRecipeResponses(
-            UserInfo userInfo,
-            List<RecipeDataResponse> recipeDataResponses
-    ) {
-        Collection<List<RecipeDataResponse>> groupedRecipeData = recipeDataResponses.stream()
-                .collect(Collectors.groupingBy(RecipeDataResponse::recipeId))
-                .values();
-
-        return groupedRecipeData.stream()
-                .map(data -> getMainRecipeResponse(userInfo, data))
+    private List<RecipeHomeWithMineResponse> getRecipeHomeWithMineResponses(UserInfo userInfo, List<Long> recipeIds) {
+        List<Recipe> recipes = recipeRepository.findAllByIdIn(recipeIds);
+        return recipes.stream()
+                .map(recipe -> {
+                    List<CategoryResponse> categories = categoryService.findCategoryByRecipe(recipe);
+                    List<IngredientResponse> ingredients = ingredientService.findIngredientByRecipe(recipe);
+                    return new RecipeHomeWithMineResponse(userInfo, recipe, categories, ingredients);
+                })
                 .sorted(Comparator.comparing(RecipeHomeWithMineResponse::recipeId).reversed())
-                .collect(Collectors.toList());
-    }
-
-    private RecipeHomeWithMineResponse getMainRecipeResponse(UserInfo userInfo,
-                                                             List<RecipeDataResponse> groupedResponses) {
-        RecipeDataResponse firstResponse = groupedResponses.getFirst();
-
-        return new RecipeHomeWithMineResponse(
-                userInfo,
-                firstResponse,
-                getCategoryResponses(groupedResponses),
-                getIngredientResponses(groupedResponses)
-        );
-    }
-
-    private List<IngredientResponse> getIngredientResponses(List<RecipeDataResponse> groupedResponses) {
-        return groupedResponses.stream()
-                .map(r -> new IngredientResponse(r.ingredientId(), r.ingredientName(), r.ingredientRequirement()))
-                .distinct()
-                .collect(Collectors.toList());
-    }
-
-    private List<CategoryResponse> getCategoryResponses(List<RecipeDataResponse> groupedResponses) {
-        return groupedResponses.stream()
-                .map(r -> new CategoryResponse(r.categoryId(), r.categoryName()))
-                .distinct()
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private void verifyRecipeOwner(UserInfo userInfo, Recipe recipe) {
